cambio de color de fondo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </style>
 </head>
-<body bgcolor="#E9C5D8">
+<body bgcolor="#E9E7F1">
 
 
 <div align="center" style="padding-top:30px; width:100%">
