--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div style="width:100%; max-width:900px" align="center">
     <div>
     <input type="text" id="inputText" style="width:80%; max-width:500px; display:inline-block"/>
-    <input type="button" value="OK" id="addButton" style="display:inline" onclick=""/>
+    <input type="button" value="OK" id="addButton" style="display:inline"/>
     </div>
 
     <div align="center" style="text-align:center">
