--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="UTF-8">
 
 	<style>
+		body {
+			background-color: #E9E7F1;
+		}
+
 		[name="checkItem"] {
 			vertical-align: middle;
 		}
@@ -33,14 +37,54 @@
 			margin: 0;
 			width: 100%;
 			max-width: 560px;
+			margin: 0 auto;
 		}
 
 		.div-description {
 			width: 80%;
 		}
 
+		.title-conteiner {
+			padding-top: 30px;
+			width: 100%
+		}
+
+		.todolist-conteiner {
+			width: 100%;
+			padding-top: 60px;
+			text-align: center;
+		}
+
+		.todolist {
+			width: 100%;
+			max-width: 900px;
+			text-align: center;
+			margin: 0 auto;
+			display: block;
+		}
+
+		.items-conteiner {
+			text-align: center;
+			width: 100%;
+			max-width: 560px;
+			text-align: center;
+			margin: 0 auto;
+		}
+
 		.div-actions {
 			width: 20%;
+		}
+
+		.title {
+			font-size: 48px;
+			line-height: 50px;
+			font-family: Arial, Helvetica, sans-serif, Geneva, sans-serif;
+			font-weight: bold;
+			color: #333333;
+		}
+
+		.item {
+			text-align: left;
 		}
 
 		li {
@@ -63,18 +107,18 @@
 	</style>
 </head>
 
-<body bgcolor="#E9E7F1">
-	<div align="center" style="padding-top:30px; width:100%">
-		<span style="font-size:48px; line-height:50px; font-family:Arial, Helvetica, sans-serif, Geneva, sans-serif; font-weight:bold; color: #333333">TO-DO LIST</span>
+<body>
+	<div align="center" class="title-conteiner">
+		<span class="title">TO-DO LIST</span>
 	</div>
-	<div align="center" width="100%" style="padding-top:60px">
-		<div style="width:100%; max-width:900px" align="center">
+	<div class="todolist-conteiner">
+		<div class="todolist">
 			<div class="conteiner">
 				<input type="text" id="ItemDescription" />
 				<input type="button" value="OK" id="addButton" />
 			</div>
-			<div align="center" style="text-align:center;width:100%; max-width:560px">
-				<ul id="toDoList" style="text-align:left;">
+			<div class="items-conteiner">
+				<ul id="toDoList" class="item">
 				</ul>
 			</div>
 		</div>
@@ -84,48 +128,53 @@
 		var addButtonElement = document.getElementById("addButton");
 		var itemDescriptionElement = document.getElementById("ItemDescription");
 		var toDoListElement = document.getElementById("toDoList");
+		var id = 0;
 
-		function item(id, desc) {
+		function item(id, description) {
 			this.id = id;
-			this.desc = desc;
+			this.description = description;
 			this.checked = false;
+			this.removed = false;
 		};
+
+		function createItem(description){
+			var newItem = new item(id, itemDescriptionElement.value);
+			id++;
+			return newItem;
+		}
 
 		var toDoList = (function() {
 			var itemsList = [];
-			var id = 0;
 
 			return {
-				addItem: function() {
-					if (itemDescriptionElement.value.length != 0) {
-						var newItem = new item(id, itemDescriptionElement.value);
-						itemsList.push(newItem);
-						showList();
-						id++;
+				addItem: function(newItem) {
+						itemsList[newItem.id] = newItem;
+						var itemElement = createItemElement(newItem.id, newItem.description, false);
+						toDoListElement.appendChild(itemElement);
 						itemDescriptionElement.value = "";
-					}
 				},
 
 				removeItem: function(id) {
-					for (var i = 0; i < itemsList.length; i++) {
-						if (itemsList[i].id == id) {
-							itemsList.splice(i, 1);
-						}
-					}
-					showList();
+					var itemSelected = document.getElementById("item" + id);
+					itemsList[id].removed = true;
+					toDoListElement.removeChild(itemSelected);
+
+
 				},
 
 				checkUncheck: function(id) {
-					for (var i = 0; i < itemsList.length; i++) {
-						if (itemsList[i].id == id) {
-							if (itemsList[i].checked) {
-								itemsList[i].checked = false;
-							} else {
-								itemsList[i].checked = true;
-							}
-						}
+					var itemSelected = document.getElementById("item" + id);
+
+
+					if (itemsList[id].checked) {
+						itemsList[id].checked = false;
+						itemSelected.setAttribute("style", "");
+					} else {
+						itemsList[id].checked = true;
+						itemSelected.setAttribute("style", "text-decoration:line-through; color:red");
 					}
-					showList();
+
+
 				},
 
 				returnItems: function() {
@@ -134,64 +183,61 @@
 			}
 		})();
 
-		function showList() {
+		function createItemElement(id, desciption, checked) {
+			var itemElement = document.createElement("li");
+			itemElement.setAttribute("id", "item" + id);
 
-			if (toDoListElement) {
-				while (toDoListElement.firstChild) {
-					toDoListElement.removeChild(toDoListElement.firstChild);
-				}
+			var itemDescriptionConteinerElement = document.createElement("div");
+			itemDescriptionConteinerElement.setAttribute("class", "div-description")
+			itemDescriptionConteinerElement.appendChild(document.createTextNode(desciption));
+			itemElement.appendChild(itemDescriptionConteinerElement);
+
+			var actionsConteinerElement = document.createElement("div");
+			actionsConteinerElement.setAttribute("class", "div-actions")
+
+			var checkboxElement = document.createElement("input");
+			checkboxElement.setAttribute("type", "checkbox");
+			checkboxElement.setAttribute("name", "checkItem");
+			checkboxElement.setAttribute("id", "checkbox" + id);
+			checkboxElement.setAttribute("onclick", "toDoList.checkUncheck(" + id + ")");
+			if (checked) {
+				itemElement.setAttribute("style", "text-decoration:line-through; color:red");
+				checkboxElement.setAttribute("checked", "true");
 			}
+			actionsConteinerElement.appendChild(checkboxElement);
 
-			var itemsList = toDoList.returnItems();
+			var deleteButtonElement = document.createElement("input");
+			deleteButtonElement.setAttribute("name", "deleteButton");
+			deleteButtonElement.setAttribute("type", "button");
+			deleteButtonElement.setAttribute("style", "margin-left:30px");
+			deleteButtonElement.setAttribute("value", "DEL");
+			deleteButtonElement.setAttribute("id", "deleteButton" + id);
+			deleteButtonElement.setAttribute("onclick", "toDoList.removeItem(" + id + ")");
+			actionsConteinerElement.appendChild(deleteButtonElement);
 
-			for (var i = 0; i < itemsList.length; i++) {
+			itemElement.appendChild(actionsConteinerElement);
 
-				var itemElement = document.createElement("li");
-				itemElement.setAttribute("id", itemsList[i].id);
-
-				var itemDescriptionConteinerElement = document.createElement("div");
-				itemDescriptionConteinerElement.setAttribute("class", "div-description")
-				itemDescriptionConteinerElement.appendChild(document.createTextNode(itemsList[i].desc));
-				itemElement.appendChild(itemDescriptionConteinerElement);
-
-				var actionsConteinerElement = document.createElement("div");
-				actionsConteinerElement.setAttribute("class", "div-actions")
-
-				var checkboxElement = document.createElement("input");
-				checkboxElement.setAttribute("type", "checkbox");
-				checkboxElement.setAttribute("name", "checkItem");
-				checkboxElement.setAttribute("id", itemsList[i].id);
-				checkboxElement.setAttribute("onclick", "toDoList.checkUncheck(" + itemsList[i].id + ")");
-				if (itemsList[i].checked) {
-					itemElement.setAttribute("style", "text-decoration:line-through; color:red");
-					checkboxElement.setAttribute("checked", "true");
-				}
-				actionsConteinerElement.appendChild(checkboxElement);
-
-				var deleteButtonElement = document.createElement("input");
-				deleteButtonElement.setAttribute("name", "deleteButton");
-				deleteButtonElement.setAttribute("type", "button");
-				deleteButtonElement.setAttribute("style", "margin-left:30px");
-				deleteButtonElement.setAttribute("value", "DEL");
-				deleteButtonElement.setAttribute("id", itemsList[i].id);
-				deleteButtonElement.setAttribute("onclick", "toDoList.removeItem(" + itemsList[i].id + ")");
-				actionsConteinerElement.appendChild(deleteButtonElement);
-
-				itemElement.appendChild(actionsConteinerElement);
-
-				toDoListElement.appendChild(itemElement);
-			}
+			return itemElement;
 		}
 
 		//Add event to Enter key up
 		itemDescriptionElement.addEventListener("keyup", function(event) {
 			event.preventDefault();
 			if (event.keyCode == 13) {
-				toDoList.addItem();
+				if (itemDescriptionElement.value.length != 0) {
+					var newItem = createItem(itemDescriptionElement.value);
+					toDoList.addItem(newItem);
+				}
 			}
 		});
 
-		addButtonElement.onclick = toDoList.addItem;
+		addButtonElement.addEventListener("click", function(event) {
+			event.preventDefault();
+			if (itemDescriptionElement.value.length != 0) {
+				var newItem = createItem(itemDescriptionElement.value);
+				toDoList.addItem(newItem);
+			}
+		});
 	</script>
 
 </body>
