Se creo un archivo para css y otro para js, se arreglo el proceso para borrar y marcar como done

--- a/index.html
+++ b/index.html
@@ -4,261 +4,25 @@
 <head>
 	<title>TO-DO LIST =)</title>
 	<meta charset="UTF-8">
-
-	<style>
-		body {
-			background-color: #DFDFDF;
-		}
-
-		li {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			padding: 0;
-			margin: 0;
-			padding: 16px;
-			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3);
-			background: #fff;
-		}
-
-		ul {
-			text-align: left;
-			padding: 0;
-			margin: 0;
-			margin-top: 5%;
-		}
-
-		h1 {
-			font-size: 72px;
-			line-height: 50px;
-			font-family: Arial, Helvetica, sans-serif, Geneva, sans-serif;
-			font-weight: bold;
-			color: #ffffff;
-			text-shadow: 3px 3px 5px #A64DFF, 6px 6px 5px #FF8000, 9px 9px 5px #6DD900;
-		}
-
-		[name="checkItem"] {
-			vertical-align: middle;
-		}
-
-		[name="deleteButton"] {
-			margin-left: 30px;
-			vertical-align: middle;
-		}
-
-		.item-description {
-			width: 80%;
-			display: inline-block;
-			margin-right: 15px;
-		}
-
-		.add-button {
-			display: inline;
-			width: 20%;
-		}
-
-		.conteiner {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			padding: 0;
-			margin: 0;
-			width: 100%;
-			max-width: 560px;
-			margin: 0 auto;
-		}
-
-		.div-description {
-			width: 80%;
-		}
-
-		.title-conteiner {
-			padding-top: 30px;
-			width: 100%
-		}
-
-		.todolist-conteiner {
-			width: 100%;
-			padding-top: 60px;
-			text-align: center;
-		}
-
-		.todolist {
-			width: 100%;
-			max-width: 900px;
-			text-align: center;
-			margin: 0 auto;
-			display: block;
-		}
-
-		.items-conteiner {
-			text-align: center;
-			width: 100%;
-			max-width: 560px;
-			text-align: center;
-			margin: 0 auto;
-		}
-
-		.div-actions {
-			width: 20%;
-		}
-
-		.item {
-			text-align: left;
-		}
-
-		.item-selected {
-			text-decoration: line-through;
-			color: red
-		}
-
-		.delete-button {
-			margin-left: 30px;
-		}
-	</style>
+	<link href="toDoListStyles.css" rel="stylesheet"/>
 </head>
 
 <body>
-	<div align="center" class="title-conteiner">
+	<div align="center" class="title-container">
 		<h1>TO-DO LIST</h1>
 	</div>
-	<div class="todolist-conteiner">
+	<div class="todolist-container">
 		<div class="todolist">
-			<div class="conteiner">
+			<div class="container">
 				<input type="text" class="item-description" id="ItemDescription" />
 				<input type="button" value="OK" class="add-button" id="addButton" />
 			</div>
-			<div class="items-conteiner">
+			<div class="items-container">
 				<ul id="toDoList" class="item">
 				</ul>
 			</div>
 		</div>
 	</div>
-
-	<script type="application/javascript">
-		var addButtonElement = document.getElementById("addButton");
-		var itemDescriptionElement = document.getElementById("ItemDescription");
-		var toDoListElement = document.getElementById("toDoList");
-
-		var item = (function() {
-			var id = 0;
-
-			return function(description) {
-				this.id = id++;
-				this.description = description;
-				this.checked = false;
-				this.removed = false;
-			}
-
-		})();
-
-		var toDoList = (function() {
-			var itemsList = [];
-
-			return {
-				addItem: function(description) {
-					//Create new item and add to the model
-					var newItem = new item(description);
-					itemsList.push(newItem);
-					//Add to the view
-					var itemElement = createItemElement(newItem.id, newItem.description);
-					toDoListElement.appendChild(itemElement);
-					//Clear the text-box
-					itemDescriptionElement.value = "";
-				},
-
-				removeItem: function(id) {
-					var itemSelected = document.getElementById("item" + id);
-					//Remove from the model
-					itemsList[id].removed = true;
-					//Remove from the view
-					toDoListElement.removeChild(itemSelected);
-				},
-
-				checkUncheck: function(id) {
-					var itemSelectedText = document.getElementById("descriptionText" + id);
-					if (itemsList[id].checked) {
-						//Model
-						itemsList[id].checked = false;
-						//View
-						itemSelectedText.setAttribute("class", "");
-					} else {
-						//Model
-						itemsList[id].checked = true;
-						//View
-						itemSelectedText.setAttribute("class", "item-selected");
-					}
-				}
-			}
-		})();
-
-		//Create the HTML structure for the items
-		function createItemElement(id, desciption) {
-			//<li id="item#">
-			var itemElement = document.createElement("li");
-			itemElement.setAttribute("id", "item" + id);
-
-			//<div class="div-description" id="divDescription#">
-			var itemDescriptionConteinerElement = document.createElement("div");
-			itemDescriptionConteinerElement.setAttribute("class", "div-description")
-			itemDescriptionConteinerElement.setAttribute("id", "divDescription" + id);
-
-			//<span id="descriptiontext#"> Text </span></div>
-			var descriptionText = document.createElement("span");
-			descriptionText.setAttribute("id", "descriptionText" + id);
-			descriptionText.appendChild(document.createTextNode(desciption));
-			itemDescriptionConteinerElement.appendChild(descriptionText);
-
-			itemElement.appendChild(itemDescriptionConteinerElement);
-
-			//<div class="div-actions">
-			var actionsConteinerElement = document.createElement("div");
-			actionsConteinerElement.setAttribute("class", "div-actions")
-
-			//<imput type="checkbox" name="checkItem" id="checkbox#" onclick="toDoList.checkUncheck(#)">
-			var checkboxElement = document.createElement("input");
-			checkboxElement.setAttribute("type", "checkbox");
-			checkboxElement.setAttribute("name", "checkItem");
-			var idCheckbox = "checkbox" + id;
-			checkboxElement.setAttribute("id", idCheckbox);
-			checkboxElement.setAttribute("onclick", "toDoList.checkUncheck(" + id + ")");
-			actionsConteinerElement.appendChild(checkboxElement);
-
-			//<imput type="button" name="deleteButton" class="delete-button" value="DEL" id="deleteButton#" onclick="todoList.removeItem(#)"></div></li>
-			var deleteButtonElement = document.createElement("input");
-			deleteButtonElement.setAttribute("name", "deleteButton");
-			deleteButtonElement.setAttribute("type", "button");
-			deleteButtonElement.setAttribute("class", "delete-button");
-			deleteButtonElement.setAttribute("value", "DEL");
-			var idDeleteButton = "deleteButton" + id;
-			deleteButtonElement.setAttribute("id", idDeleteButton);
-			deleteButtonElement.setAttribute("onclick", "toDoList.removeItem(" + id + ")");
-			actionsConteinerElement.appendChild(deleteButtonElement);
-
-			itemElement.appendChild(actionsConteinerElement);
-
-			return itemElement;
-		}
-
-		function sendDescriptionValue() {
-			if (itemDescriptionElement.value.length != 0) {
-				toDoList.addItem(itemDescriptionElement.value);
-			}
-		}
-
-		//Add event to Enter key up
-		itemDescriptionElement.addEventListener("keyup", function(event) {
-			if (event.keyCode == 13) {
-				sendDescriptionValue();
-			}
-		});
-
-		//Add function for onclick event
-		addButtonElement.onclick = function() {
-			sendDescriptionValue();
-		}
-	</script>
-
 </body>
-
+<script type="text/javascript" src="toDoList.js"></script>
 </html>
